--- a/style2.3.css
+++ b/style2.3.css
@@ -1,4 +1,6 @@
-
+html{
+    scroll-behavior: smooth;
+}
 
 header{
     position: fixed;
@@ -221,3 +223,21 @@ nav a:hover::after{
     margin: auto auto;
     padding: 80px 20px;
 } */
+
+footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+    margin-left: 30px;
+}
+
+footer p{
+    color:whitesmoke
+}
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 30px;
+}
